--- a/metodos-de-treino-baseados-em-arvore.qmd
+++ b/metodos-de-treino-baseados-em-arvore.qmd
@@ -1,4 +1,3 @@
-
 # Métodos de Treino Baseados em Árvore
 
 Neste capítulo será estudado de forma mais aprofundada modelos de treinamento baseados em árvores, os quais são simples para interpretação, como: árvores de decisão e regressão, florestas aleatórias, adaboost, entre outros. O objetivo é entender o funcionamento dos mesmos, assim como os critérios que utilizam para classificarem as amostras.
@@ -131,3 +130,100 @@ base %>% group_by(Thal, HeartDisease) %>% summarise(N=n())
 Vamos, primeiramente, olhar para a variável "Thal = normal". Ela separa os dados da seguinte forma:
 
 ![](images/Arvore_Thal_normal.png){fig-align="center"}
+
+Note que a maioria dos pacientes que possuem doença cardíaca estão no grupo dos que possuem "Thal = normal".
+
+Vamos calcular o índice Gini do nó "Thal = Normal Sim":
+
+$Gini(Thal = Normal Sim)$ = 1 - $\left(\frac{8}{52}\right)^2$ - $\left(\frac{44}{52}\right)^2$ = $0,260$
+
+Agora vamos calcular o índice Gini do nó "Thal = Normal Não":
+
+$Gini(Thal = Normal Não)$ = 1 - $\left(\frac{8}{20}\right)^2$ - $\left(\frac{12}{20}\right)^2$ = $0,480$
+
+Então o índice Gini da variável "Thal = Normal" fica da seguinte forma:
+
+$Gini(Thal = Normal)$ = $0,260$ $\times$ $\left(\frac{52}{70}\right)$ + $0,480$ $\times$ $\left(\frac{20}{72}\right)$ = $0,321$
+
+Agora vamos olhar para a variável "Thal = Fixed". Ela separa os dados da seguinte forma:
+
+![](images/Arvore_Thal_fixed.png){fig-align="center"}
+
+Vamos calcular o índice Gini do nó "Thal = Fixed Sim":
+
+$Gini(Thal = Fixed Sim)$ = 1 - $\left(\frac{1}{4}\right)^2$ - $\left(\frac{3}{4}\right)^2$ = $0,375$
+
+Agora vamos calcular o índice Gini do nó "Thal = Fixed Não":
+
+$Gini(Thal = Fixed Não)$ = 1 - $\left(\frac{15}{68}\right)^2$ - $\left(\frac{53}{68}\right)^2$ = $0,344$
+
+Então o índice Gini da variável "Thal = Fixed" fica da seguinte forma:
+
+$Gini(Thal = Fixed)$ = $0,375$ $\times$ $\left(\frac{4}{72}\right)$ + $0,344$ $\times$ $\left(\frac{68}{72}\right)$ = $0,346$
+
+Por último, vamos olhar para a variável "Thal = Reversable".
+
+![](images/Arvore_Thal_reversable.png){fig-align="center"}
+
+Vamos calcular o índice Gini do nó "Thal = Reversable Sim":
+
+$Gini(Thal = Reversable Sim)$ = 1 - $\left(\frac{7}{16}\right)^2$ - $\left(\frac{9}{16}\right)^2$ = $0,492$
+
+Agora vamos calcular o índice Gini do nó "Thal = Reversable Não":
+
+$Gini(Thal = Reversable Não)$ = 1 - $\left(\frac{9}{56}\right)^2$ - $\left(\frac{47}{56}\right)^2$ = $0,269$
+
+Então o índice Gini da variável "Thal = Reversable" fica da seguinte forma:
+
+$Gini(Thal = Reversable)$ = $0,492$ $\times$ $\left(\frac{16}{72}\right)$ + $0,269$ $\times$ $\left(\frac{56}{72}\right)$ = $0,319$
+
+Resumindo, os índices Ginis de todas as variáveis são:
+
+| **Variáveis**       | **Índice Gini** |
+|---------------------|-----------------|
+| Sex = M             | 0,331           |
+| ChestPain = Typical | 0,339           |
+| Thal = Normal       | 0,321           |
+| Thal = Fixed        | 0,346           |
+| Thal = Reversable   | 0,319           |
+
+A variável "Thal = Reversable" é a que possui o menor índice Gini, portanto ela é a mais pura. Ela ficará no topo da árvore de decisão, ou seja, será o nó raiz.
+
+![](images/Raiz_Arvore_Final.png){fig-align="center"}
+
+O próximo passo é definir as variáveis que ficarão no nó "Thal = Reversable Sim" e "Thal = Reversable Não". Para isso temos que olhar para a base de dados com os indivíduos do grupo "Thal = Reversable Sim" e "Thal = Reversable Não", respectivamente.
+
+```{r}
+# Grupo de indivíduos "Thal = Reversable Sim":
+base1 = base %>% filter(Thal == "reversable")
+head(base1)
+```
+
+Agora temos que calcular o índice Gini para todas as variáveis referentes a esse grupo. A que for mais pura entrará no nó "Thal = Reversable Sim". Poupando os cálculos, vamos obter que o menor índice Gini é o da variável "ChestPain = Typical".
+
+```{r}
+# Grupo de indivíduos "Thal = Reversable Não":
+base2 = base %>% filter(Thal != "reversable")
+head(base2)
+```
+
+Agora calculamos também o índice Gini para todas as variáveis referentes a esse grupo. Após os cálculos necessários veremos que o menor índice Gini é o da variável "ChestPain = Nontypical".
+
+Dessa forma, podemos dar continuidade a nossa árvore.
+
+![](images/Arvore_de_Decisao_Final.png){fig-align="center"}
+
+Após obtidos esses novos nós, o processo continua se repetindo, obtendo novos nós e/ou folhas para a árvore, até a construção chegar ao fim.
+
+Pergunta: quando o processo de construção de uma árvore chega ao fim? O processo de construção pode terminar por 3 fatores:
+
+* Quando a pureza do nó é maior do que o de qualquer variável que adicionamos;
+* Quando atingimos folhas 100% puras (índice Gini = 0);
+* Quando o ganho ao aumentar a árvore é muito pequeno.
+
+
+
+
+
+
+
